--- a/index.jade
+++ b/index.jade
@@ -1,2 +1,1 @@
-h1 Welcome to Harp.
-h3 This is yours to own. Enjoy.
+h1 I really think we should leave the body alone and do it all using AngularJS templates.
