Linked Angular and Pure

--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -2,7 +2,10 @@ doctype
 html
   head
     title Elasticity
-    link(href="main.css", rel="stylesheet", type="text/css")
+    link(href="/main.css", rel="stylesheet", type="text/css")
+    script(src="/bower_components/angular/angular.min.js")
+    script(src="/bower_components/angular-route/angular-route.js")
+
   body
     header
       h1 Elasticity
