--- a/_root/main.less
+++ b/_root/main.less
@@ -1,4 +1,5 @@
 @import "//fonts.googleapis.com/css?family=Lato:300";
+@import "/bower_components/pure/pure-min.css";
 
 body {
 	font-family:Lato, sans-serif;
