--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -1,16 +1,22 @@
 - var rand = Math.random();
 doctype
-html
+html(ng-app="app")
   head
     title Elasticity
     link(href="#{'/main.css?v=' + rand}", rel="stylesheet", type="text/css")
+    // The CSS links
+    link(href="/main.css", rel="stylesheet", type="text/css")
+    // Boilerplate angular files
     script(src="/bower_components/angular/angular.min.js")
     script(src="/bower_components/angular-route/angular-route.js")
-
+    // Controllers
+    script(src="angular-main.js")
+    script(src="register-ctrl.js") 
+    script(src="angular-routes.js")
   body
-    header
-      h1 Elasticity
-    != yield
-    footer
-      p
-        | By James Mishra, Ari Falkner and Krish Dholakiya for Static Showdown and #hack4good.
+    div(ng-view)
+    input(ng-model="hi")
+    div.
+      {{hi}}
+    footer.
+        By James Mishra, Ari Falkner and Krish Dholakiya for Static Showdown and #hack4good.
