--- a/_root/angular-templates/register.jade
+++ b/_root/angular-templates/register.jade
@@ -1,5 +1,5 @@
 form.pure-form(ng-submit='registerUser()')
-  input(type='text', placeholder='Username', ng-model='user.username', required)
+  input(type='text', autofocus, placeholder='Username', ng-model='user.username', required)
   input(type='email', placeholder='Email address', ng-model='user.email', required)
   input(type='password', placeholder='Password', ng-model='user.password', required)
 
