--- a/_root/main.less
+++ b/_root/main.less
@@ -16,6 +16,7 @@ body {
 	font-family:Raleway, sans-serif;
 	background: @bg;
 	background-size:cover;
+	padding-bottom:35px;
 	h1, h2, h3 { font-weight:300; }
 }
 
@@ -31,6 +32,20 @@ body {
 	.tabs {
 		position: relative;
 		left: -20px;
+	}
+	.cost-gdp, .item-slider {
+		display: inline-block;
+		vertical-align: bottom;
+		margin: 10px 25px;
+		background: rgba(255,255,255,.1);
+		padding: 10px;
+		min-height: 90px;
+	}
+	.item-pic {
+		display:block;
+		max-height: 200px;
+		border-radius: 3px;
+		border: 2px solid rgba(255,255,255,.2);
 	}
 }
 
