Removed unnecessary link to Purecss

--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -5,7 +5,7 @@ html(ng-app="app")
 
     // The CSS links
     link(href="/main.css", rel="stylesheet", type="text/css")
-    link(href="./bower_components/pure/pure.css", rel="stylesheet", type="text/css")
+    // Pure is imported using @import
     // Boilerplate angular files
     script(src="/bower_components/angular/angular.min.js")
     script(src="/bower_components/angular-route/angular-route.js")
