--- a/_root/angular-templates/home.jade
+++ b/_root/angular-templates/home.jade
@@ -1,1 +1,4 @@
-a.pure-button.pure-button-primary(href='/#/register') New Account
+.content
+  h1 Play Elasticity
+  a.pure-button.pure-button-primary(href='/#/dashboard') Start
+  
