--- a/_root/main.less
+++ b/_root/main.less
@@ -20,6 +20,17 @@ body {
 	h1, h2, h3 { font-weight:300; }
 }
 
+.content {
+	max-width: 450px;
+	margin: 0 auto;
+	text-align: center;
+	background: #2c3e50;
+	padding: 30px;
+	color: #FFF;
+	border-bottom-right-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+
 .dashboard {
 	max-width: 750px;
 	margin: 0 auto;
