city object written

--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -9,8 +9,11 @@ html(ng-app="app")
     // Boilerplate angular files
     script(src="/bower_components/angular/angular.min.js")
     script(src="/bower_components/angular-route/angular-route.js")
+    script(src="/bower_components/angular-resource/angular-resource.js")
 
     script(src="angular-main.js")
+    script(src="./angular-services/city.js") 
+    script(src="./angular-services/cityObjects/cityObject.js") 
     script(src="register-ctrl.js") 
     script(src="angular-routes.js")
    
