--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -14,7 +14,8 @@ html(ng-app="app")
     script(src="angular-main.js")
     script(src="./angular-services/city.js") 
     script(src="./angular-services/cityObjects/cityObject.js") 
-    script(src="register-ctrl.js") 
+    script(src="./controllers/register-ctrl.js") 
+    script(src="./controllers/market-ctrl.js") 
     script(src="angular-routes.js")
    
   body
