Added basic marketplace stuff

--- a/_root/main.less
+++ b/_root/main.less
@@ -75,3 +75,27 @@ footer {
 	padding:5px;
 	color: @textColor;
 }
+
+.items {
+	.item {
+		max-height: 300px;
+		display: inline-block;
+		margin: 10px 10px;
+		min-width: 150px;
+		background: rgba(255,255,255,.1);
+		padding: 5px;
+		text-align: center;
+		border-radius: 5px;
+		border-right: 3px solid rgba(0,0,0,.1);
+		img {
+			height: 100px;
+		}
+		h2 {
+			margin: 0;
+		}
+		p {
+			margin: 0;
+			margin-bottom: 20px;
+		}
+	}
+}
