--- a/_root/dashboard-components/marketplace.ejs
+++ b/_root/dashboard-components/marketplace.ejs
@@ -1,1 +1,6 @@
-<h1> Marketplace</h1>
+<h1>Marketplace</h1>
+<div class="items">
+  <div class="item" ng-repeat="item in items">
+    <img ng-src="{{ item.imageUrl || 'http://placehold.it/500x500' }}">
+    <h2>{{ item.name}}</h2>
+    <p>{{ item.cost }}</p>
