--- a/_root/dashboard-components/marketplace.ejs
+++ b/_root/dashboard-components/marketplace.ejs
@@ -3,4 +3,4 @@
   <div class="item" ng-repeat="item in items">
     <img ng-src="{{ item.imageUrl || 'http://placehold.it/500x500' }}">
     <h2>{{ item.name}}</h2>
-    <p>{{ item.cost }}</p>
+    <p><i class="icon ion-card"></i> {{ item.cost }}</p>
