--- a/_root/main.less
+++ b/_root/main.less
@@ -87,6 +87,10 @@ footer {
 		text-align: center;
 		border-radius: 5px;
 		border-right: 3px solid rgba(0,0,0,.1);
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
 		img {
 			height: 100px;
 		}
