--- a/_root/dashboard-components/marketplace.ejs
+++ b/_root/dashboard-components/marketplace.ejs
@@ -1,7 +1,7 @@
 <h1>Marketplace</h1>
 <div class="items">
   <div class="item" ng-repeat="item in items">
-    <a ng-href="{{ '/#/dashboard/marketplace/' + item.name.toLowerCase() }}">
+    <a ng-href="{{ '/#/dashboard/marketplace/' + item.name.replace(' ', '-').toLowerCase() }}">
     <img ng-src="{{ item.imageUrl || 'http://placehold.it/500x500' }}">
     <h2>{{ item.name}}</h2>
     <p><i class="icon ion-card"></i> {{ item.cost }}</p>
