--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -12,6 +12,7 @@ html(ng-app="app")
     script(src="/bower_components/angular-resource/angular-resource.js")
 
     script(src="angular-main.js")
+    script(src="./angular-constants.js")
     script(src="./angular-services/cityObjects/cityObject.js") 
     script(src="./angular-services/city.js")
     script(src="./controllers/register-ctrl.js") 
