--- a/_root/main.less
+++ b/_root/main.less
@@ -53,7 +53,7 @@ body {
 		min-height: 90px;
 	}
 	.item-pic {
-		display:block;
+		display:inline-block;
 		max-height: 200px;
 		border-radius: 3px;
 		border: 2px solid rgba(255,255,255,.2);
@@ -102,4 +102,11 @@ footer {
 			margin-bottom: 20px;
 		}
 	}
+}
+
+.item-desc {
+	display: inline-block;
+	max-width: 300px;
+	vertical-align: bottom;
+	margin: 10px;
 }
