--- a/_root/angular-templates/home.jade
+++ b/_root/angular-templates/home.jade
@@ -1,4 +1,4 @@
 .content
   h1 Play Elasticity
   a.pure-button.pure-button-primary(href='/#/dashboard') Start
-  
+  <a href="https://twitter.com/intent/tweet?hashtags=staticshowdown&original_referer=https%3A%2F%2Fabout.twitter.com%2Fresources%2Fbuttons&text=Check%20out%20Elasticity%20by%20MVConquerors&tw_p=tweetbutton&url=http://ss14-team-294.divshot.io&via=staticshowdown&yolo=swag" class="twitter-share-button pure-button pure-button-primary" data-url="http://ss14-team-294.divshot.io" data-text="Check out Elasticity by MVConquerors" data-via="staticshowdown"><i class="icon ion-social-twitter"></i>Tweet</a> 
