--- a/_root/dashboard-components/item.ejs
+++ b/_root/dashboard-components/item.ejs
@@ -5,5 +5,4 @@
   <p class="item-cost">{{ item.info.cost + ' Credits' }}</p>
   <p class="item-gdp">5% increase in GDP/year</p>
 </div>
-<a ng-click="purchaseItem()" class="pure-button pure-button-primary">Buy</a>
-<canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
+<canvas linechart options="options" data="gdpComparison" width="500" height="300"></canvas>
