Added back the buy button

--- a/_root/dashboard-components/item.ejs
+++ b/_root/dashboard-components/item.ejs
@@ -6,4 +6,4 @@
   <p class="item-cost">{{ item.info.cost + ' Credits' }}</p>
   <p class="item-gdp">5% increase in GDP/year</p>
 </div>
-// <canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
+<!-- <canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas> -->
