--- a/_root/dashboard-components/item.ejs
+++ b/_root/dashboard-components/item.ejs
@@ -6,3 +6,4 @@
   <p class="item-gdp">5% increase in GDP/year</p>
 </div>
 <canvas barchart options="options" data="gdpComparison" width="500" height="300"></canvas>
+<div id="hi">{{item.getGdpIncreasePercentage(city, 10)}}</div>
