--- a/_root/dashboard-components/item.ejs
+++ b/_root/dashboard-components/item.ejs
@@ -4,6 +4,7 @@
 <a ng-click="purchaseItem()" class="pure-button pure-button-primary">Buy</a>
 <div class="cost-gdp">
   <p class="item-cost">{{ item.info.cost + ' Credits' }}</p>
+  <p class="your-credits"> {{ 'Your balance: ' + city.getBalance()  + ' credits.' }}</p>
   <p class="item-gdp">{{ item.getGdpIncrease(1) + '% increase in GDP/year' }}</p>
 </div>
 
