--- a/_root/dashboard-components/item.ejs
+++ b/_root/dashboard-components/item.ejs
@@ -1,11 +1,10 @@
-<div>You're balance: {{city.getBalance()}}</div>
 <h1 class="item-name" ng-bind="item.info.name">Tractor</h1>
 <img ng-src="{{ item.info.imageUrl }}" class="item-pic">
 <p class="item-desc" ng-bind="item.info.description">Flop over shake treat bag, throwup on your pillow yet climb leg, all of a sudden go crazy stretch. Cat snacks sweet beast behind the couch cat snacks intrigued by the shower destroy couch missing until dinner time. Intently sniff hand. Under the bed throwup on your pillow sun bathe. Why must they do that leave hair everywhere hide when guests come over. Stretch shake treat bag. Play time stare at ceiling sweet beast, but climb leg or throwup on your pillow stretch.</p>
 <a ng-click="purchaseItem()" class="pure-button pure-button-primary">Buy</a>
 <div class="cost-gdp">
   <p class="item-cost">{{ item.info.cost + ' Credits' }}</p>
-  <p class="your-credits"> {{ 'Your balance: ' + city.getBalance()  + ' credits.' }}</p>
+  <p class="your-credits"> {{ 'Your balance: ' + Math.round(city.getBalance()) + ' credits.' }}</p>
   <p class="item-gdp">{{ item.getGdpIncrease(1) + '% increase in GDP/year' }}</p>
 </div>
 
