--- a/_root/main.less
+++ b/_root/main.less
@@ -49,7 +49,7 @@ body {
 		vertical-align: bottom;
 		margin: 10px 25px;
 		background: rgba(255,255,255,.1);
-		padding: 20px;
+		padding:5px 20px;
 		min-height: 90px;
 	}
 	.item-pic {
