--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -19,6 +19,7 @@ html(ng-app="app")
     script(src="./controllers/register-ctrl.js") 
     script(src="./controllers/market-ctrl.js") 
     script(src="./controllers/item-ctrl.js")
+    script(src="./controllers/statistics-ctrl.js")
     script(src="angular-routes.js")
    
   body
