--- a/_root/dashboard-components/statistics.jade
+++ b/_root/dashboard-components/statistics.jade
@@ -1,7 +1,7 @@
 h1 Statistics
 
 strong Current Balance:
-| {{ city.getGdpCurrent() }}
+| {{ city.getBalance() }}
 
 input(type="range", ng-model="years", min=0, max=100)
 
