--- a/_root/main.less
+++ b/_root/main.less
@@ -10,6 +10,12 @@
 	border-radius:0px !important;
 }
 
+.pure-table {
+	margin: 20px auto;
+	width: 80%;
+	text-align: left;
+}
+
 // End Pure
 
 body {
@@ -117,4 +123,8 @@ a[ng-click="purchaseItem()"] {
 	padding: 35px 70px;
 	font-size: 3em;
 	margin-top: 12px;
+}
+
+.stats {
+	text-align: center;
 }
