Added some stuff

--- a/_root/dashboard-components/_layout.jade
+++ b/_root/dashboard-components/_layout.jade
@@ -9,7 +9,7 @@
     a.pure-button(href="/#/dashboard/loans") 
       i.icon.ion-pricetags
       | Your Loans
-    a.pure-button(href="/#/dashboard/quests") 
+    //a.pure-button(href="/#/dashboard/quests") 
       i.icon.ion-calendar
       | Quests
   != yield 
