--- a/_root/_layout.jade
+++ b/_root/_layout.jade
@@ -10,7 +10,7 @@ html(ng-app="app")
     script(src="/bower_components/angular/angular.min.js")
     script(src="/bower_components/angular-route/angular-route.js")
     script(src="/bower_components/angular-resource/angular-resource.js")
-    script(src="./Chart.min.js")
+    script(src="./Chart.js")
     script(src="/angles.js")
     script(src="angular-main.js")
     script(src="./angular-constants.js")
