--- a/_root/dashboard-components/statistics.jade
+++ b/_root/dashboard-components/statistics.jade
@@ -14,7 +14,9 @@ h1 Statistics
 
   h2 Projected GDP growth: 
   canvas(data="gdpGrowth", width=500, height=300, linechart)
-  canvas(data="itemChart", width=500, height=300, piechart)
+
+  h2 Item Inventory
+  canvas(data="itemChart", width=500, height=300, barchart)
 
   table.pure-table
     tr
