--- a/_root/dashboard-components/statistics.jade
+++ b/_root/dashboard-components/statistics.jade
@@ -7,7 +7,7 @@ h1 Statistics
     | {{ age | number: 1}} years
 
   p Future Balance:
-    | <strong>{{ years | balance:city}}</strong> after <strong>{{ years}}</strong> years
+    | <strong>{{ years | balance:city | number }}</strong> after <strong>{{ years | number }}</strong> years
     br 
     br 
     input(type="range", style="width: 500px", min=0, max=100000, ng-model="years")
