--- a/_root/dashboard-components/about.ejs
+++ b/_root/dashboard-components/about.ejs
@@ -17,10 +17,16 @@ Some of the items in the Marketplace give a better return on investment
 than others. Part of the fun is finding the fastest way to make your
 city grow.
 </p>
+<h2>For a Better Cause</h2>
 <p>
 The items you buy correspond to actual loan categories on <a
 href="http://kiva.org">Kiva</a>. When you "buy" virtual items,
 the game looks up loans on Kiva that you might be interested in.
+</p>
+<p>
+  When purchasing a product, scroll down past the purchase item until you see the loan button:
+  <br /> <br />
+  <img src="/dashboard-components/loan_sample.png" width="500" />
 </p>
 <p>
 In the future, lending to the developing world would be directly
