--- a/_root/dashboard-components/_layout.jade
+++ b/_root/dashboard-components/_layout.jade
@@ -6,7 +6,7 @@
     a.pure-button(href="/#/dashboard/statistics") 
       i.icon.ion-stats-bars
       | Statistics
-    a.pure-button(href="/#/dashboard/loans") 
+    //a.pure-button(href="/#/dashboard/loans") 
       i.icon.ion-pricetags
       | Your Loans
     //a.pure-button(href="/#/dashboard/quests") 
