--- a/_root/dashboard-components/statistics.jade
+++ b/_root/dashboard-components/statistics.jade
@@ -3,6 +3,9 @@ h1 Statistics
   p Current Balance:
     | {{ balance }}
  
+  p Current GDP:
+    | {{ GDP }}
+
   p Current Age:
     | {{ age | number: 1}} years
 
